#99 Fix the scrolling sidebar issue.
Issue: 99
**********
When Food Settings opened then sidebar scrollbar not working properly

Issue: 99 : Done
*****************
1.Fix the Scrolling issue for Food Settings menu. [Done]
- wp-content\plugins\wp-food-manager\assets\css\backend.css

--- a/assets/css/backend.css
+++ b/assets/css/backend.css
@@ -3,6 +3,9 @@
   opacity: 0.6;
 }*/
 
+.food_manager_page_food-manager-settings #adminmenuwrap{
+  position: relative !important;
+}
 .wpfm-font-wesome-class {
   display: grid;
   grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
